--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,119 @@
 
+
+body{
+  margin: 0;
+  font-family: 'Ubuntu Mono', monospace;
+  background-color: #E1CCB7;
+}
+
+h1{
+  margin: 0;
+  font-size: 5em;
+  font-variant: small-caps;
+}
+h3{
+  margin: 0;
+}
+
+h2{
+  margin: 0;
+  font-variant: small-caps;
+  font-size: 2em;
+}
+
+p{
+  margin: 0;
+  line-height: 1;
+}
+
+a{
+  color: black;
+  text-decoration: none;
+}
+span{
+  text-decoration: underline;
+}
+
+hr{
+  width: 60%;
+  border-style: dashed;
+  border-left: 0;
+  border-bottom: 0;
+  border-right: 0;
+  border-width: 2px;
+  margin: 0 auto 0 auto;
+}
+
+.NavBar{
+  position: fixed;
+  background-color: #71816D;
+  width: 100%;
+  padding: 10px;
+}
+table{
+  margin: 5px auto 5px auto;
+}
+td{
+  padding: 0 5px 0 5px;
+}
+
+.TopContainer{
+  text-align: center;
+  background-color: #EDE0D4;
+  margin: 0;
+  padding: 100px;
+  padding-top: 158px;
+}
+.TitleImage{
+  width: 6em;
+  height: 6em;
+}
+
+
+.SecondContainer{
+  text-align: center;
+  background-color: #E7D6C5;
+  padding: 50px;
+}
+.About{
+  margin: 40px auto 40px auto;
+  text-align: center;
+  width: 50%;
+}
+.AboutImg{
+  width: 6em;
+  height: 6em;
+}
+
+
+.ThirdContainer{
+  text-align: center;
+  padding: 50px;
+  background-color: #E1CCB7;
+}
+.CraftRow{
+  width: 50%;
+  margin: 40px auto 40px auto;
+  text-align: justify;
+}
+.CraftRowImg{
+  float: left;
+  margin-right: 20px;
+  height: 6em;
+  width: 6em;
+}
+
+.BottomContainer{
+  background-color: #DBC2A9;
+  text-align: center;
+  padding: 40px;
+  padding-bottom: 120px;
+}
+
+.Footer{
+  text-align: center;
+  background-color: #484A47;
+  padding: 20px;
+  padding-bottom: 120px;
+}
+
